# veil

./: README.md  package-lock.json
.github/workflows/: ci.yml  fuzz.yml  reproducible-build.yml
contracts/: Cargo.toml  expected-hashes.json
contracts/factory/: Cargo.toml
contracts/fuzz/: Cargo.toml
contracts/fuzz/fuzz_targets/: fuzz_check_auth.rs  fuzz_webauthn.rs
contracts/invisible_wallet/: Cargo.toml  PROOFS.md
contracts/mock-wallet/: Cargo.toml
contracts/multisig-wallet/: Cargo.toml
docs/: reproducible-build.md
examples/capacitor/: capacitor.config.json  index.html  package.json
examples/chrome-extension/: README.md  background.js  content.js  manifest.json  sidepanel.css  sidepanel.html  sidepanel.js
examples/dapp-connector/: README.md  connector.js  manifest.json
examples/expo/: .env.example  App.tsx  README.md  app.json  metro.config.js  package.json
examples/nextjs/: .env.example  README.md  next.config.mjs  package-lock.json  package.json
examples/tauri/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/tauri/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri/src-tauri/src/: main.rs
frontend/wallet/: .env.example  jest.config.js  package-lock.json  package.json  tsconfig.json
frontend/website/: package-lock.json  package.json
scripts/: reproducible-build.sh  upload_multisig_wasm.mjs
sdk/: jest.setup.js  package-lock.json  package.json  tsconfig.json
sdk/src/: index.ts  outbox.ts  useInvisibleWallet.ts  webauthn.native.ts  webauthn.ts
sdk/test-d/: index.test-d.ts
(+102 files in other folders)
