[package]
name = "veil_tauri_example"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.24"
p256 = { version = "0.11", features = ["ecdsa"] }
sha2 = "0.10"
rand_core = "0.6"
tauri = { version = "2.3.2", features = ["api-all"] }
tauri-plugin-biometric = "2.3.2"
